--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         }
     </style>
 </head>
-<body class="shower list">
+<body class="shower full">
 
     <header class="caption">
         <h1>Уязвимости вашего React-приложения</h1>
