--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
     </header>
 
     <section class="slide center" id="cover">
-        <h2>Уязвимости вашего React-приложения</h2>
+        <div>
+            <h2>Уязвимости вашего React-приложения</h2>
+            <p style="text-align: center">Вероника Самохина, Контур</p>
+        </div>
 
         <style>
             #cover h2 {
